Revert "make CORS allowed origins configurable via env var"
This reverts commit 25cee30040ca87510bc9f6bef2a2b62d5f3e0aed.